--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <h1 id="abdul-haseeb--flutter--dart-developer-3-years">Abdul Haseeb — Flutter &amp; Dart Developer (3+ Years) </h1>
 <p><strong>Email:</strong> [haseebkahn365@gmail.com]<br>
 <strong>GitHub:</strong> <a href="https://github.com/HaseebKahn365">github.com/HaseebKahn365</a><br>
+<strong>Portfolio:</strong> <a href="https://haseebkahn365.github.io">https://haseebkahn365.github.io</a><br>
 <strong>Phone:</strong> 03491777261<br>
 <strong>Location:</strong> [Shergarh, Tehsil Takht Bhai, District Mardan, KPK, Pakistan]</p>
 <hr>
